argo-rollout-canary/canary-manifests/rolling-update/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rolling-update
spec:
  replicas: 2
  strategy:
    canary:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: rolling-update
  template:
    metadata:
      labels:
        app: rolling-update
    spec:
      containers:
        - name: rolling-update
          image: ahmedevops/blue-green # This is the same image that we built in the previous session (v12-argo-rollouts-blue-green) , I just re-tagged it
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rolling-update
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: rolling-update
