argo-rollout-canary/canary-manifests/rolling-update/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-rolling-update-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rolling-update
                port:
                  number: 5000
